start proxy container and rewrite file path